error_templates/java/test_files/unclosed_character_literal_error/test.txt
template: "Java.UnclosedCharacterLiteralError"
---
UnclosedCharacterLiteralError.java:4: error: unclosed character literal
        char ch = 'Hello World'; // This will cause an error because the character literal is not closed.
                  ^
UnclosedCharacterLiteralError.java:4: error: unclosed character literal
        char ch = 'Hello World'; // This will cause an error because the character literal is not closed.
                              ^
2 errors
===
template: "Java.UnclosedCharacterLiteralError"
---
# UnclosedCharacterLiteralError
This error occurs because the character literal in the code is not correctly closed. In Java, character literals should contain only a single character enclosed in single quotes. However, in this case, 'Hello World' is a string and cannot be stored in a single character variable.

## Steps to fix
1. Change the variable type from `char` to `String` as 'Hello World' is a string.
```diff
    public static void main(String[] args) {
-       char ch = 'Hello World'; // This will cause an error because the character literal is not closed.
+       String ch = "Hello World"; // Change the variable type to String for a string value.
    }
```

2. If you want to store a single character, correct the character literal to contain only one character within single quotes.
```diff
    public static void main(String[] args) {
-       char ch = 'Hello World'; // This will cause an error because the character literal is not closed.
+       char ch = 'H'; // Store a single character within single quotes.
    }
```

The error message highlights an attempt to assign multiple characters within single quotes to a `char` variable, which causes the "UnclosedCharacterLiteralError". To fix this, either change the variable type to `String` or ensure that only a single character is enclosed within the single quotes for a `char` variable.
